<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
      name="viewModel"
      type="org.oppia.android.app.settings.profile.ProfileRenameViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
      android:id="@+id/profile_rename_app_bar_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <androidx.appcompat.widget.Toolbar
        android:id="@+id/profile_rename_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:fontFamily="sans-serif"
        android:minHeight="?attr/actionBarSize"
        app:navigationContentDescription="@string/navigate_up"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:title="@string/profile_rename_title"
        app:titleTextAppearance="@style/ToolbarTextAppearance"
        app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:background="@color/generalNavigationBackground"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/profile_rename_app_bar_layout">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/general_item_background_border"
        android:paddingBottom="32dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/profile_rename_input"
          style="@style/TextInputLayout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="28dp"
          android:layout_marginTop="28dp"
          android:layout_marginEnd="28dp"
          android:hint="@string/profile_rename_label"
          app:errorMessage="@{viewModel.nameErrorMsg}"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent">

          <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profile_rename_input_edit_text"
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:maxLength="36"
            android:singleLine="true"
            android:text="@{viewModel.inputName}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
          android:id="@+id/profile_rename_save_button"
          style="@style/StateButtonActive"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:layout_marginEnd="28dp"
          android:background="@{viewModel.inputName.length > 0 ? @drawable/state_button_primary_background :@drawable/start_button_transparent_background}"
          android:clickable="@{viewModel.inputName.length > 0}"
          android:enabled="@{viewModel.inputName.length > 0}"
          android:text="@string/profile_rename_save"
          android:textAllCaps="true"
          android:textColor="@{viewModel.inputName.length > 0 ? @color/white : @color/submitButtonInactiveText }"
          android:textSize="14sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toBottomOf="@id/profile_rename_input" />
      </androidx.constraintlayout.widget.ConstraintLayout>

      <View
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="@drawable/toolbar_drop_shadow" />
    </FrameLayout>
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
